--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -35,6 +35,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           cache: npm
+          cache-dependency-path: ./demo/package-lock.json
 
       - name: Cargo build
         run: cargo build --target=wasm32-wasip1 --release --lib
