--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -40,6 +40,10 @@ jobs:
       - name: Cargo build
         run: cargo build --target=wasm32-wasip1 --release --lib
 
+      - name: Install npm dependencies
+        run: npm run ci
+        working-directory: demo
+
       - name: Npm build
         run: npm run build
         working-directory: demo
