--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -41,7 +41,7 @@ jobs:
         run: cargo build --target=wasm32-wasip1 --release --lib
 
       - name: Install npm dependencies
-        run: npm run ci
+        run: npm ci
         working-directory: demo
 
       - name: Npm build
