--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -45,7 +45,7 @@ jobs:
         working-directory: demo
 
       - name: Npm build
-        run: npm run build
+        run: npm run build -- --base=/jcdump/
         working-directory: demo
 
       - name: Setup Pages
